Corregido fallos en la interfaz

--- a/operaciones.html
+++ b/operaciones.html
@@ -4251,7 +4251,7 @@
                };
 
                /* ---------------- L Ó G I C A  I N T E R A C T I V A ---------------- */
-               let currentOpKey = 'tabla';
+               let currentOpKey = 'suma';
                let currentProblem = { a: 0, b: 0, answer: 0 };
 
                const tabs = document.querySelectorAll('.tab');
