--- a/operaciones.html
+++ b/operaciones.html
@@ -1797,7 +1797,7 @@
                      <li><strong><u>Eliminar el segundo paréntesis</u></strong></li>
                      <p>Para quitar el paréntesis del segundo sumando, hemos de <em>fusionar</em> el signo de la operación con el del sumando. Es decir, convertimos el signo intermedio en un solo signo siguiendo esta regla:</p>
                      <ul>
-                     <li><strong>Si el signo intermedio y el siguiente signo son iguales</strong> (por ejemplo, <code>+ +</code> o <code>- -</code>), se sustituyen por el <strong>signo existente</strong>.</li>
+                     <li><strong>Si el signo intermedio y el siguiente signo son iguales</strong> (por ejemplo, <code>+ +</code> o <code>- -</code>), se sustituyen por un único <strong><code>+</code></strong>.</li>
                      <li><strong>Si los signos son diferentes</strong> (por ejemplo, <code>+ -</code> o <code>- +</code>), se sustituyen por un único <strong><code>-</code></strong>.</li>
                      </ul>
 
